# Thats-Not-A-Vid.cc

./: .gitignore  CMakeLists.txt  README.md  design.txt
include/: cli.h  config.h  decode.h  encode.h
src/: .cli.cpp.swp  CMakeLists.txt  cli.cpp  decode.cpp  encode.cpp  main.cpp
